--- a/admin.html
+++ b/admin.html
@@ -1,7 +1,32 @@
 import streamlit as st
+from datetime import datetime
+import json
+import os
 import requests
 
+st.set_page_config(page_title="Happy Birthday Ella! 🎂", page_icon="🎉", layout="centered")
+
+MESSAGES_FILE = "messages.json"
 hidden_password = "P1cklesC@t"
+
+# Load and save messages
+def load_messages():
+    if os.path.exists(MESSAGES_FILE):
+        with open(MESSAGES_FILE, "r") as f:
+            try:
+                return json.load(f)
+            except json.JSONDecodeError:
+                return []
+    return []
+
+def save_messages(messages):
+    with open(MESSAGES_FILE, "w") as f:
+        json.dump(messages, f)
+
+def add_message(name, message):
+    messages = load_messages()
+    messages.append({"name": name, "message": message})
+    save_messages(messages)
 
 def get_ip_info(ip):
     try:
@@ -12,10 +37,130 @@ def get_ip_info(ip):
         pass
     return {}
 
-# Your existing code above...
+# CSS for the page and hidden login button + admin styling
+st.markdown("""
+<style>
+  .pennant-container {
+    position: fixed;
+    top: 10px;
+    right: 150px;
+    display: flex;
+    gap: 4px;
+    z-index: 9999;
+    user-select: none;
+  }
+  .triangle-flag {
+    width: 30px;
+    height: 30px;
+    background: linear-gradient(135deg, #ff3399, #cc0066);
+    clip-path: polygon(0 0, 100% 0, 50% 100%);
+    color: white;
+    font-family: 'Comic Sans MS', cursive;
+    font-weight: bold;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding-top: 5px;
+    box-shadow: 0 0 6px rgba(255, 51, 153, 0.8);
+  }
+  .birthday-header {
+    text-align: center;
+    font-family: 'Comic Sans MS', cursive;
+    font-size: 48px;
+    color: #ff3399;
+    margin: 80px auto 10px;
+    user-select: none;
+  }
+  .birthday-header .balloons {
+    font-size: 60px;
+    vertical-align: middle;
+  }
+  .birthday-text {
+    text-align: center;
+    font-family: 'Comic Sans MS', cursive;
+    font-size: 22px;
+    color: #ff3399;
+    margin: 0 auto 30px;
+  }
+  .message-box {
+    border: 2px solid #ff3399;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px auto;
+    width: 70%;
+    background-color: #ffe6f0;
+    font-family: 'Comic Sans MS', cursive;
+    color: #cc0066;
+  }
+  /* Hidden login button */
+  #hidden-login {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    background: transparent;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    appearance: none;
+    z-index: 10000;
+    cursor: pointer;
+  }
+  #hidden-login:focus {
+    outline: none;
+  }
+  /* Admin panel styling */
+  .admin-panel {
+    background-color: #1e293b;
+    color: #f8fafc;
+    padding: 20px;
+    border-radius: 12px;
+    margin: 30px auto 50px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    max-width: 800px;
+  }
+  .ip-info-title {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 12px;
+  }
+  .ban-btn {
+    background-color: #ef4444;
+    color: white;
+    border: none;
+    padding: 10px 16px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: 600;
+    margin-top: 15px;
+  }
+  .ban-btn:hover {
+    background-color: #dc2626;
+  }
+  iframe {
+    border-radius: 12px;
+  }
+</style>
+""", unsafe_allow_html=True)
 
+# Hidden login button (completely invisible)
 clicked = st.button(" ", key="hidden-login", help=None)
 
+# Trick to add the ID and attributes to the button element to prevent tooltip:
+st.markdown("""
+<script>
+const btn = window.parent.document.querySelector('button[kind="primary"][data-testid="stButton"][id^="hidden-login"]');
+if (btn) {
+  btn.id = 'hidden-login';
+  btn.title = '';
+  btn.setAttribute('aria-label', '');
+}
+</script>
+""", unsafe_allow_html=True)
+
+# --- Admin Panel Logic ---
 if clicked:
     pwd = st.text_input("Enter password to login:", type="password")
     if pwd == hidden_password:
@@ -30,50 +175,32 @@ if clicked:
 
         ip_info = get_ip_info(ip)
 
-        st.markdown("""
-        <style>
-        .admin-panel {
-            background-color: #1e293b;
-            color: #f8fafc;
-            padding: 20px;
-            border-radius: 12px;
-            margin-bottom: 30px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        .ip-info-title {
-            font-size: 24px;
-            font-weight: 700;
-            margin-bottom: 12px;
-        }
-        .ban-btn {
-            background-color: #ef4444;
-            color: white;
-            border: none;
-            padding: 10px 16px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-weight: 600;
-            margin-top: 15px;
-        }
-        .ban-btn:hover {
-            background-color: #dc2626;
-        }
-        </style>
-        """, unsafe_allow_html=True)
-
         st.markdown('<div class="admin-panel">', unsafe_allow_html=True)
         st.markdown(f'<div class="ip-info-title">IP Information for: {ip}</div>')
 
-        # Show IP info except loc to avoid clutter
-        filtered_info = {k: v for k, v in ip_info.items() if k != "loc" and k != "readme"}
+        # Show IP info except loc and readme
+        filtered_info = {k: v for k, v in ip_info.items() if k not in ("loc", "readme")}
         st.json(filtered_info)
 
-        # Show map if loc available
+        # Google Maps embed
         loc_str = ip_info.get("loc")
         if loc_str:
             lat, lon = map(float, loc_str.split(","))
-            st.markdown("### IP Location Map")
-            st.map(data={"lat": [lat], "lon": [lon]})
+            st.markdown("### IP Location Map (Google Maps)")
+            google_maps_url = f"https://maps.google.com/maps?q={lat},{lon}&hl=en&z=14&output=embed"
+            iframe_html = f"""
+            <iframe 
+                width="100%" 
+                height="400" 
+                frameborder="0" 
+                style="border:0;" 
+                src="{google_maps_url}" 
+                allowfullscreen="" 
+                aria-hidden="false" 
+                tabindex="0">
+            </iframe>
+            """
+            st.markdown(iframe_html, unsafe_allow_html=True)
         else:
             st.info("No location data available for this IP.")
 
@@ -84,3 +211,60 @@ if clicked:
 
     elif pwd:
         st.error("Wrong password!")
+
+# --- Birthday Page UI ---
+st.markdown("""
+<div class="pennant-container">
+  <div class="triangle-flag">H</div>
+  <div class="triangle-flag">A</div>
+  <div class="triangle-flag">P</div>
+  <div class="triangle-flag">P</div>
+  <div class="triangle-flag">Y</div>
+  <div class="triangle-flag">B</div>
+  <div class="triangle-flag">I</div>
+  <div class="triangle-flag">R</div>
+  <div class="triangle-flag">T</div>
+  <div class="triangle-flag">H</div>
+  <div class="triangle-flag">D</div>
+  <div class="triangle-flag">A</div>
+  <div class="triangle-flag">Y</div>
+</div>
+
+<div class="birthday-header">
+  <span class="balloons">🎈</span>
+  Happy Birthday Ella!
+  <span class="balloons">🎈</span>
+</div>
+
+<div class="birthday-text">
+    <p>Hi Ella! 🎉</p>
+    <p>Wishing you an amazing birthday filled with love, laughter, and lots of delicious cake 🍰.</p>
+    <p>May your day be as wonderful and bright as you are! 💖</p>
+    <p><em>With lots of love, <strong>Will</strong></em></p>
+</div>
+""", unsafe_allow_html=True)
+
+# Birthday message form and display
+with st.form("wish_form"):
+    name = st.text_input("Your Name")
+    wish = st.text_input("Write your birthday message to Ella 💌")
+    submitted = st.form_submit_button("Send Wish")
+    if submitted:
+        if not name.strip() or not wish.strip():
+            st.warning("Please enter both your name and your message!")
+        else:
+            add_message(name.strip(), wish.strip())
+            st.success("🎉 Your wish has been sent!")
+
+st.markdown("### 🎂 Birthday Messages for Ella 🎂")
+messages = load_messages()
+for msg in reversed(messages):
+    st.markdown(f"""
+    <div class="message-box">
+        <b>{msg['name']}</b><br>
+        {msg['message']}
+    </div>
+    """, unsafe_allow_html=True)
+
+# Auto refresh birthday messages every 10 seconds (refresh whole page)
+st.markdown('<meta http-equiv="refresh" content="10">', unsafe_allow_html=True)
